--- a/po/eu.po
+++ b/po/eu.po
@@ -1,19 +1,21 @@
+# translation of eu.po to librezale
 # Basque translations for Mousepad package.
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
-# Piarres Beobide <pi@beobide.net>, 2005.
 #
+# Piarres Beobide <pi@beobide.net>, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: Mousepad 0.2.5svn\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2005-11-17 17:43+0900\n"
+"PO-Revision-Date: 2006-05-01 00:20+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: Librezale.org <librezale@librezale.org>\n"
+"Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #: ../src/callback.c:34
 #, c-format
@@ -23,7 +25,7 @@ msgstr "'%s'-ren aldaketak gorde?"
 #: ../src/callback.c:180 ../src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "Ezin da kodeketa '%s'-ra biurtu"
+msgstr "Ezin da kodeketa '%s'-ra bihurtu"
 
 #: ../src/callback.c:207
 msgid "Can't open pipe to process"
@@ -40,7 +42,7 @@ msgstr "%s-ri buruz"
 
 #: ../src/file.c:163
 msgid "Can't open file to write"
-msgstr "Ezind a fitxategia idazketarako ireki"
+msgstr "Ezin da fitxategia idazketarako ireki"
 
 #: ../src/file.c:168
 msgid "Can't write file"
@@ -62,7 +64,7 @@ msgstr "/Fitxategia/_Berria"
 #. G_CALLBACK(cb_file_new), 1 },
 #: ../src/menu.c:66
 msgid "/File/_Open..."
-msgstr "/itxategia/_Ireki"
+msgstr "/fitxategia/_Ireki"
 
 #: ../src/menu.c:68
 msgid "/File/_Save"
@@ -78,7 +80,7 @@ msgstr "/Fitxategia/_Inprimatu"
 
 #: ../src/menu.c:76
 msgid "/File/_Quit"
-msgstr "/Fixtaegia/It_xi"
+msgstr "/Fitxategia/It_xi"
 
 #: ../src/menu.c:78
 msgid "/_Edit"
@@ -102,15 +104,15 @@ msgstr "/Editatu/_Kopiatu"
 
 #: ../src/menu.c:90
 msgid "/Edit/_Paste"
-msgstr "/Editatu/_Itsasi"
+msgstr "/Editatu/_Itsatsi"
 
 #: ../src/menu.c:92
 msgid "/Edit/_Delete"
-msgstr "/Ediatatu/_Ezabatu"
+msgstr "/Editatu/_Ezabatu"
 
 #: ../src/menu.c:96
 msgid "/Edit/Select _All"
-msgstr "/Editatu/Dana _Hautatu"
+msgstr "/Editatu/Dena _Hautatu"
 
 #: ../src/menu.c:98
 msgid "/_Search"
@@ -134,7 +136,7 @@ msgstr "/Bilaketa/_Ordeztu"
 
 #: ../src/menu.c:110
 msgid "/Search/_Jump To..."
-msgstr "/Bilaket/_Joan hona..."
+msgstr "/Bilaketa/_Joan hona..."
 
 #: ../src/menu.c:112
 msgid "/_Options"
@@ -150,11 +152,11 @@ msgstr "/Aukerak/_Itzulbira "
 
 #: ../src/menu.c:118
 msgid "/Options/_Line Numbers"
-msgstr "/Aukerak/_Lerro Zenakiak"
+msgstr "/Aukerak/_Lerro Zenbakiak"
 
 #: ../src/menu.c:122
 msgid "/Options/_Auto Indent"
-msgstr "/Aukerak/_Auto Konkatu"
+msgstr "/Aukerak/_Auto Kontaktu"
 
 #: ../src/menu.c:124
 msgid "/_Help"
@@ -162,7 +164,7 @@ msgstr "/_Laguntza"
 
 #: ../src/menu.c:126
 msgid "/Help/_About"
-msgstr "/LAguntza/_Honi buruz"
+msgstr "/Laguntza/_Honi buruz"
 
 #: ../src/search.c:73
 msgid "Search string not found"
@@ -237,7 +239,7 @@ msgstr "Auto Atzeman"
 
 #: ../src/selector.c:325
 msgid "Open"
-msgstr "Irkei"
+msgstr "Ireki"
 
 #: ../src/selector.c:325
 msgid "Save As"
@@ -245,7 +247,7 @@ msgstr "Gorde honela"
 
 #: ../src/selector.c:345
 msgid "Ch_aracter Coding: "
-msgstr "L_araketere Kodeketa"
+msgstr "K_araketere Kodeketa"
 
 #: ../src/selector.c:401
 #, c-format
@@ -258,12 +260,13 @@ msgstr "Izenburu gabea"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
-msgstr ""
+msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
-msgstr ""
+msgstr "Testu Editore Sinplea"
 
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
-msgstr ""
+msgstr "Testu Editorea"
+
