Updated Russian translations by   Anthony Ivanoff <a-i@bk.ru>,   Maxim Zenin <webmechanics@gmail.com>,   Sergey Fedoseev <fedoseev.sergey@gmail.com>.
(Old svn revision: 21420)

--- a/po/ru.po
+++ b/po/ru.po
@@ -1,4 +1,4 @@
-# Russian translations for Mousepad package.
+# Russian translation of Mousepad package.
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Artem Vakhitov <temcat@mail.ru>, 2004.
@@ -139,7 +139,7 @@ msgstr "/Поиск/Перейти к _строке..."
 
 #: ../src/menu.c:112
 msgid "/_Options"
-msgstr "Параметры"
+msgstr "/П_араметры"
 
 #: ../src/menu.c:114
 msgid "/Options/_Font..."
