--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-01  Daichi Kawahata <daichi@xfce.org>
+
+	* ru.po: Updated Russian translations by Sergey Fedoseev
+	  <fedoseev.sergey@gmail.com>.
+
 2006-04-30  Daichi Kawahata <daichi@xfce.org>
 
 	* pl.po: Updated Polish translations by Piotr Malinski
