--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -136,7 +136,7 @@
 2005-10-07  Daichi Kawahata <daichi@xfce.org>
 
 	* sk.po: Corrected file encoding by Roman Moravcik
-	  <morgan@pobox.sk>.
+	  <roman.moravcik@gmail.com>.
 	* ca.po, cs.po, de.po, el.po, es.po, fr.po, gu.po, hu.po, it.po,
 	  ja.po, lt.po, pl.po, pt_BR.po, ru.po, sv.po, ta.po, zh_CN.po,
 	  zh_TW.po: Modified initial comment strings. Changed package
