--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-05  Daichi Kawahata <daichi@xfce.org>
+
+	* sk.po: Updated Slovak translations by Roman Moravcik
+	  <roman.moravcik@gmail.com>.
+
 2006-05-04  Daichi Kawahata <daichi@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
