--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-14  Daichi Kawahata <daichi@xfce.org>
+
+	* fr.po: Updated French translations by Maximilian Schleiss
+	  <maxschleiss@bluewin.ch>.
+
 2006-05-13  Daichi Kawahata <daichi@xfce.org>
 
 	* pl.po: Updated Polish translations by Szymon Kalasz
