Update traditional Chinese translations; Modify personal e-mail address.
(Old svn revision: 22074)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
+
+	* zh_TW.po: Modify the translator's e-mail address.
+
 2006-05-14  Daichi Kawahata <daichi@xfce.org>
 
 	* fr.po: Updated French translations by Maximilian Schleiss
