--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the Mousepad package.
 # Carlos Z.F. Liu <carlos_liu@yahoo.com>, 2004.
 # OLS3 <ols3@lxer.idv.tw>, 2004.
-# Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>, 2005.
+# Hydonsingore Cia <hydonsingore@educities.edu.tw>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2006-04-29 07:34+0800\n"
-"Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
+"PO-Revision-Date: 2006-06-12 21:25+0800\n"
+"Last-Translator: Hydonsingore Cia <hydonsingore@educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
