Updated French translations
(Old svn revision: 22455)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-15  Jean-François Wauthy
+
+	* fr.po: Updated French translations by Maximilian Schleiss
+	 <maxschleiss@bluewin.ch>
+
 2006-06-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: Modify the translator's e-mail address.
