Greek translations update
(Old svn revision: 22507)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-22  Stavros Giannouris
+
+	* el.po: Updated greek translations
+
 2006-07-15  Jean-François Wauthy
 
 	* fr.po: Updated French translations by Maximilian Schleiss
