--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-30  Hydonsingore Cia <hydonsingore@educities.edu.tw>
+
+	* zh_TW.po: Updated traditional Chinese translations.
+
 2006-07-22  Stavros Giannouris
 
 	* el.po: Updated greek translations
