--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,28 +10,28 @@ msgstr ""
 "Project-Id-Version: Mousepad 0.2.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2006-06-12 21:25+0800\n"
+"PO-Revision-Date: 2006-07-30 23:21+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../src/callback.c:34
+#: ../src/callback.c:36
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "要將變更儲存到“%s”?"
+msgstr "要將變更儲存到 '%s'"
 
-#: ../src/callback.c:180 ../src/file.c:150
+#: ../src/callback.c:184 ../src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "無法將編碼轉換為 “%s”"
+msgstr "無法將編碼轉換為 '%s'"
 
-#: ../src/callback.c:207
+#: ../src/callback.c:211
 msgid "Can't open pipe to process"
 msgstr "無法打開至程序的管線"
 
-#: ../src/callback.c:366
+#: ../src/callback.c:370
 msgid "A text editor for Xfce"
 msgstr "一個 Xfce 的文字編輯器"
 
@@ -58,113 +58,115 @@ msgstr "/檔案(_F)"
 
 #: ../src/menu.c:62
 msgid "/File/_New"
-msgstr "/檔案(F)/新建(_N)"
+msgstr "/檔案/新建(_N)"
 
-#. { N_("/File/New _Window"), "<shift><control>N",
-#. G_CALLBACK(cb_file_new), 1 },
-#: ../src/menu.c:66
-msgid "/File/_Open..."
-msgstr "/檔案(F)/開啟(_O)..."
+#: ../src/menu.c:65
+msgid "/File/New _Window"
+msgstr "/檔案/新視窗(_W)..."
 
 #: ../src/menu.c:68
-msgid "/File/_Save"
-msgstr "/檔案(F)/儲存(_S)"
+msgid "/File/_Open..."
+msgstr "/檔案/開啟(_O)..."
 
 #: ../src/menu.c:70
-msgid "/File/Save _As..."
-msgstr "/檔案(F)/另存為(_A)..."
+msgid "/File/_Save"
+msgstr "/檔案/儲存(_S)"
 
 #: ../src/menu.c:72
-msgid "/File/_Print..."
-msgstr "/檔案(F)/列印(_P)..."
+msgid "/File/Save _As..."
+msgstr "/檔案/另存為(_A)..."
 
-#: ../src/menu.c:76
-msgid "/File/_Quit"
-msgstr "/檔案(F)/離開(_Q)"
+#: ../src/menu.c:74
+msgid "/File/_Print..."
+msgstr "/檔案/列印(_P)..."
 
 #: ../src/menu.c:78
+msgid "/File/_Quit"
+msgstr "/檔案/離開(_Q)"
+
+#: ../src/menu.c:80
 msgid "/_Edit"
 msgstr "/編輯(_E)"
 
-#: ../src/menu.c:80
-msgid "/Edit/_Undo"
-msgstr "/編輯(E)/回復(_U)"
-
 #: ../src/menu.c:82
-msgid "/Edit/_Redo"
-msgstr "/編輯(E)/重做(_R)"
+msgid "/Edit/_Undo"
+msgstr "/編輯/回復(_U)"
 
-#: ../src/menu.c:86
-msgid "/Edit/Cu_t"
-msgstr "/編輯(E)/剪下(_T)"
+#: ../src/menu.c:84
+msgid "/Edit/_Redo"
+msgstr "/編輯/重做(_R)"
 
 #: ../src/menu.c:88
-msgid "/Edit/_Copy"
-msgstr "/編輯(E)/複製(_C)"
+msgid "/Edit/Cu_t"
+msgstr "/編輯/剪下(_T)"
 
 #: ../src/menu.c:90
-msgid "/Edit/_Paste"
-msgstr "/編輯(E)/貼上(_P)"
+msgid "/Edit/_Copy"
+msgstr "/編輯/複製(_C)"
 
 #: ../src/menu.c:92
-msgid "/Edit/_Delete"
-msgstr "/編輯(E)/刪除(_D)"
+msgid "/Edit/_Paste"
+msgstr "/編輯/貼上(_P)"
 
-#: ../src/menu.c:96
-msgid "/Edit/Select _All"
-msgstr "/編輯(E)/全選(_A)"
+#: ../src/menu.c:94
+msgid "/Edit/_Delete"
+msgstr "/編輯/刪除(_D)"
 
 #: ../src/menu.c:98
+msgid "/Edit/Select _All"
+msgstr "/編輯/全選(_A)"
+
+#: ../src/menu.c:100
 msgid "/_Search"
 msgstr "/搜尋(_S)"
 
-#: ../src/menu.c:100
-msgid "/Search/_Find..."
-msgstr "/搜尋(S)/尋找(_F)..."
-
 #: ../src/menu.c:102
-msgid "/Search/Find _Next"
-msgstr "/搜尋(S)/尋找下一個(_N)"
+msgid "/Search/_Find..."
+msgstr "/搜尋/尋找(_F)..."
 
 #: ../src/menu.c:104
-msgid "/Search/Find _Previous"
-msgstr "/搜尋(S)/尋找上一個(_P)"
+msgid "/Search/Find _Next"
+msgstr "/搜尋/尋找下一個(_N)"
 
 #: ../src/menu.c:106
+msgid "/Search/Find _Previous"
+msgstr "/搜尋/尋找上一個(_P)"
+
+#: ../src/menu.c:108
 msgid "/Search/_Replace..."
 msgstr "/搜尋/置換(_R)..."
 
-#: ../src/menu.c:110
-msgid "/Search/_Jump To..."
-msgstr "/搜尋(S)/跳到(_J)..."
-
 #: ../src/menu.c:112
+msgid "/Search/_Jump To..."
+msgstr "/搜尋/跳至(_J)..."
+
+#: ../src/menu.c:114
 msgid "/_Options"
 msgstr "/選項(_O)"
 
-#: ../src/menu.c:114
-msgid "/Options/_Font..."
-msgstr "/選項(O)/字型(_F)..."
-
 #: ../src/menu.c:116
-msgid "/Options/_Word Wrap"
-msgstr "/選項(O)/自動換行(_W)"
+msgid "/Options/_Font..."
+msgstr "/選項/字型(_F)..."
 
 #: ../src/menu.c:118
-msgid "/Options/_Line Numbers"
-msgstr "/選項(O)/列號(_L)"
+msgid "/Options/_Word Wrap"
+msgstr "/選項/自動換行(_W)"
 
-#: ../src/menu.c:122
-msgid "/Options/_Auto Indent"
-msgstr "/選項(O)/自動縮排(_A)"
+#: ../src/menu.c:120
+msgid "/Options/_Line Numbers"
+msgstr "/選項/列號(_L)"
 
 #: ../src/menu.c:124
+msgid "/Options/_Auto Indent"
+msgstr "/選項/自動縮排(_A)"
+
+#: ../src/menu.c:126
 msgid "/_Help"
 msgstr "/說明(_H)"
 
-#: ../src/menu.c:126
+#: ../src/menu.c:128
 msgid "/Help/_About"
-msgstr "/說明(H)/關於(_A)"
+msgstr "/說明/關於(_A)"
 
 #: ../src/search.c:73
 msgid "Search string not found"
@@ -172,7 +174,7 @@ msgstr "找不到搜尋字串"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "要置換嗎?"
+msgstr "要置換嗎？"
 
 #: ../src/search.c:143
 #, c-format
@@ -197,7 +199,7 @@ msgstr "置換"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "置換成(_A): "
+msgstr "置換成(_P)："
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
@@ -205,7 +207,7 @@ msgstr "全部置換(_A)"
 
 #: ../src/search.c:342
 msgid "Jump To"
-msgstr "跳到"
+msgstr "跳至"
 
 #: ../src/search.c:347
 msgid "_Jump"
@@ -213,7 +215,7 @@ msgstr "跳(_J)"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "列號(_L): "
+msgstr "行數(_L)"
 
 #: ../src/selector.c:103
 #, c-format
@@ -226,12 +228,12 @@ msgstr "其它編碼"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "編碼(_S):"
+msgstr "編碼(_S)："
 
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "“%s”尚未支援"
+msgstr "尚未支援 '%s'"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
@@ -247,14 +249,14 @@ msgstr "另存為"
 
 #: ../src/selector.c:345
 msgid "Ch_aracter Coding: "
-msgstr "字元編碼(_A): "
+msgstr "字元編碼(_A)："
 
 #: ../src/selector.c:401
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "檔案“%s”已經存在. 要覆蓋它嗎？"
+msgstr "檔案'%s'已經存在. 要覆蓋它嗎？"
 
-#: ../src/window.c:141
+#: ../src/window.c:143
 msgid "Untitled"
 msgstr "無標題"
 
