--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-01  Sylvain Vedrenne <gnu_sylvain@xfce.org>
+
+	* LINGUAS, eo.po: Added Esperanto translations
+	from Jarbas Araujo Jr. <jarbasaraujojr@yahoo.com.br>
+
 2006-07-30  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: Updated traditional Chinese translations.
