--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-05  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2006-08-01  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
 	* LINGUAS, eo.po: Added Esperanto translations
