--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-20  Jean-François Wauthy <pollux@xfce.org>
+
+	* gl.po: Add Galician translations
+
 2006-08-05  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
