--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-29  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2006-08-27  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations
