--- a/po/hu.po
+++ b/po/hu.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Mousepad 0.2.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2006-07-25 09:56+0100\n"
-"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-09-01 11:40+0100\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,11 +70,11 @@ msgstr "/Fájl/_Megnyitás"
 
 #: ../src/menu.c:68
 msgid "/File/_Save"
-msgstr "/Fájl/M_entés"
+msgstr "/Fájl/Menté_s"
 
 #: ../src/menu.c:70
 msgid "/File/Save _As..."
-msgstr "/Fájl/Men_tés másként..."
+msgstr "/Fájl/Men_tés mint..."
 
 #: ../src/menu.c:72
 msgid "/File/_Print..."
@@ -188,7 +188,7 @@ msgstr "Keresés"
 #: ../src/search.c:200
 #: ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "_Keresett szöveg: "
+msgstr "Kerese_ndő: "
 
 #: ../src/search.c:219
 #: ../src/search.c:292
