2006-09-02  Benedikt Meurer <benny@xfce.org>
	* de.po: Updated german translations by Enrico TrÃ¶ger
	  <enrico.troeger@uvena.de>.




(Old svn revision: 22995)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2006-09-02  Benedikt Meurer <benny@xfce.org>
+
+	* de.po: Updated german translations by Enrico Tröger
+	  <enrico.troeger@uvena.de>.
+
 2006-08-29  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2006-08-27  Jean-François Wauthy <pollux@xfce.org>
 
