updated Dutch translations
(Old svn revision: 23063)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-03  Jean-François Wauthy <pollux@xfce.org>
+
+	* nl.po: Add Dutch translations
+
 2006-09-02  Benedikt Meurer <benny@xfce.org>
 
 	* de.po: Updated german translations by Enrico Tröger
