[i18n] update catalan translation
(Old svn revision: 23177)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-18  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ca.po: Update Catalan update
+
 2006-09-03  Jean-François Wauthy <pollux@xfce.org>
 
 	* nl.po: Add Dutch translations
