--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-10  Alexander Toresson <alexander.toresson@gmail.com>
+
+	* sv.po: Updated Swedish translation by Daniel Nylander
+	<po@danielnylander.se>
+
 2006-09-18  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Update Catalan update
