--- a/po/sv.po
+++ b/po/sv.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Isak Savo <iso01001@student.mdh.se>, 2004.
+# Daniel Nylander <po@danielnylander.se>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2005-10-07 18:51+0900\n"
-"Last-Translator: Isak Savo <iso01001@student.mdh.se>\n"
+"PO-Revision-Date: 2006-10-10 19:09+0100\n"
+"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,21 +19,21 @@ msgstr ""
 #: ../src/callback.c:34
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Spara ändringar för '%s'?"
+msgstr "Spara ändringar för \"%s\"?"
 
-#: ../src/callback.c:180 ../src/file.c:150
+#: ../src/callback.c:180
+#: ../src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "Kan inte konvertera kodning till '%s'"
+msgstr "Kan inte konvertera kodning till \"%s\""
 
 #: ../src/callback.c:207
-#, fuzzy
 msgid "Can't open pipe to process"
-msgstr "Kan inte öppna fil att skriva till"
+msgstr "Kan inte öppna rör för att behandla"
 
 #: ../src/callback.c:366
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "En textredigerare för Xfce"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -74,9 +75,8 @@ msgid "/File/Save _As..."
 msgstr "/Arkiv/S_para som..."
 
 #: ../src/menu.c:72
-#, fuzzy
 msgid "/File/_Print..."
-msgstr "/Arkiv/_Öppna..."
+msgstr "/Arkiv/_Skriv ut..."
 
 #: ../src/menu.c:76
 msgid "/File/_Quit"
@@ -92,7 +92,7 @@ msgstr "/Redigera/_Ångra"
 
 #: ../src/menu.c:82
 msgid "/Edit/_Redo"
-msgstr "/Redigera/_Upprepa"
+msgstr "/Redigera/_Gör om"
 
 #: ../src/menu.c:86
 msgid "/Edit/Cu_t"
@@ -108,7 +108,7 @@ msgstr "/Redigera/Klistra _in"
 
 #: ../src/menu.c:92
 msgid "/Edit/_Delete"
-msgstr "/Redigera/_Radera"
+msgstr "/Redigera/_Ta bort"
 
 #: ../src/menu.c:96
 msgid "/Edit/Select _All"
@@ -140,7 +140,7 @@ msgstr "/Sök/_Hoppa till..."
 
 #: ../src/menu.c:112
 msgid "/_Options"
-msgstr "/_Inställningar"
+msgstr "/_Alternativ"
 
 #: ../src/menu.c:114
 msgid "/Options/_Font..."
@@ -183,11 +183,13 @@ msgstr "%d strängar har ersatts"
 msgid "Find"
 msgstr "Sök"
 
-#: ../src/search.c:200 ../src/search.c:265
+#: ../src/search.c:200
+#: ../src/search.c:265
 msgid "Fi_nd what: "
 msgstr "S_öksträng: "
 
-#: ../src/search.c:219 ../src/search.c:292
+#: ../src/search.c:219
+#: ../src/search.c:292
 msgid "_Match case"
 msgstr "Matcha _gemener/VERSALER"
 
@@ -219,7 +221,7 @@ msgstr "_Radnummer: "
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Nuvarande kodning (%s)"
+msgstr "Aktuell lokal (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
@@ -253,7 +255,7 @@ msgstr "Tecken_kodning: "
 #: ../src/selector.c:401
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' finns redan. Vill du skriva över?"
+msgstr "\"%s\" finns redan. Vill du skriva över?"
 
 #: ../src/window.c:141
 msgid "Untitled"
@@ -261,13 +263,12 @@ msgstr "Namnlös"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
-msgstr ""
+msgstr "Musmatta"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
-msgstr "Enkel texteditor"
+msgstr "Enkel textredigerare"
 
 #: ../mousepad.desktop.in.h:3
-#, fuzzy
 msgid "Text Editor"
-msgstr "Enkel texteditor"
+msgstr "Textredigerare"
