i18n various updates and add
(Old svn revision: 23382)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-13  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* nl.po: Updated Dutch translation by Stephan Arts
+	<psybsd@gmail.com>
+
 2006-10-10  Alexander Toresson <alexander.toresson@gmail.com>
 
 	* sv.po: Updated Swedish translation by Daniel Nylander
