Korean translation updates by ByungHyun Choi and French thunar translation  update (some typos)
(Old svn revision: 23448)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-17  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* ko.po: Updated Korean translation by ByungHyun Choi
+	<byunghyun.choi@gmail.com>
+
 2006-10-13  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* nl.po: Updated Dutch translation by Stephan Arts
