i18n mousepad polish update
(Old svn revision: 23525)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-26  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* pl.po: Updated Polish translation by Szymon Kałasz
+	<szymon_maestro@gazeta.pl>
+
 2006-10-17  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* ko.po: Updated Korean translation by ByungHyun Choi
