--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-28  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* dz.po: add Dzongkha translation by Dzongkha team
+	Tenzin <tdendup@dit.gov.bt>
+
 2006-10-26  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* pl.po: Updated Polish translation by Szymon Kałasz
