--- a/po/eu.po
+++ b/po/eu.po
@@ -6,7 +6,7 @@
 # Piarres Beobide <pi@beobide.net>, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: Mousepad 0.2.5svn\n"
+"Project-Id-Version: mousepad 0.2.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-10 14:29+0200\n"
 "PO-Revision-Date: 2006-05-01 00:20+0200\n"
