--- a/po/gl.po
+++ b/po/gl.po
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad\n"
+"Project-Id-Version: mousepad 0.2.10\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2005-02-21 16:40-0500\n"
 "PO-Revision-Date: 2006-08-18 00:52+0000\n"
