--- a/po/ka.po
+++ b/po/ka.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Mousepad 0.2.5svn\n"
+"Project-Id-Version: mousepad 0.2.10\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: 2006-08-24 23:36+0400\n"
 "Last-Translator: Dimitri Gogelia <delphi.knight@gmail.com>\n"
