--- a/po/nl.po
+++ b/po/nl.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Mousepad 0.2.7svn-r22930\n"
+"Project-Id-Version: mousepad 0.2.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-10 14:29+0200\n"
 "PO-Revision-Date: 2006-09-02 18:17+0200\n"
