--- a/po/de.po
+++ b/po/de.po
@@ -2,14 +2,16 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Sebastian Stach <sebsta@t-online.de>, 2004.
+# Enrico Tröger <enrico.troeger@uvena.de>, 2006.
+# Benedikt Meurer <benny@xfce.org>, 2006.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.10\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-07-10 14:29+0200\n"
-"PO-Revision-Date: 2006-08-29 16:23+0100\n"
-"Last-Translator: Enrico Tröger <enrico.troeger@uvena.de>\n"
+"Project-Id-Version: mousepad 0.2.11svn\n"
+"Report-Msgid-Bugs-To: xfce-i18n@xfce.org\n"
+"POT-Creation-Date: 2006-11-04 17:08+0100\n"
+"PO-Revision-Date: 2006-11-04 17:10+0100\n"
+"Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -254,7 +256,14 @@ msgstr "Zeichen_kodierung: "
 msgid "'%s' already exists. Overwrite?"
 msgstr "'%s' existiert bereits. Überschreiben?"
 
-#: ../src/window.c:143
+#. add the label with the root warning
+#: ../src/window.c:110
+msgid "Warning, you are using the root account, you may harm your system."
+msgstr ""
+"Achtung, Sie arbeiten mit Superuser-Rechten und können Ihr System "
+"beschädigen."
+
+#: ../src/window.c:169
 msgid "Untitled"
 msgstr "Unbenannt"
 
