--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-11-04	Benedikt Meurer <benny@xfce.org>
 
+	* src/selector.c(create_file_chooser): Apply patch from Nick Schermer
+	  <nick@xfce.org> to set default response in the open/save file dialogs
+	  so hitting enter opens/saves the file. Bug #2249.
+
+2006-11-04	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in: Post-release version bump.
 	* src/window.c: Add root warning. Bug #2245.
 	* po/mousepad.pot, po/*.po: Merge new strings.
