mousepad basque translation update
(Old svn revision: 23753)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-06  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2006-11-04  Benedikt Meurer <benny@xfce.org>
 
 	* mousepad.pot, *.po: Merge new strings.
