--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* cs.po: Updated the Czech translation
+	by Michal Várady <miko.vaji@gmail.com>.
+
 2006-11-09  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
