Updated the Korean translation for the mousepad package and corrected the  French xfburn translation following the advice from JFW
(Old svn revision: 23830)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -6,6 +6,8 @@
 
 	* cs.po: Updated the Czech translation
 	by Michal Várady <miko.vaji@gmail.com>.
+	* ko.po: Updated the Korean translation
+	by ByungHyun Choi <byunghyun.choi@debianusers.org>.
 
 2006-11-09  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
