--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-14  Jean-François Wauthy <pollux@xfce.org>
+
+	* cy.po: Add Welsh translations by Geraint Rowlands <ansbaradigeidfran@gmail.com>
+
 2006-11-11  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update
@@ -19,7 +23,7 @@
 
 2006-11-06  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2006-11-04  Benedikt Meurer <benny@xfce.org>
 
