Updated the Spanish translations by Rudy Godoy for the following packages 	xfce4-panel; xfce4-session Modified the description text of the translation files for fr cy and es Fixed typo in French translation of thunar
(Old svn revision: 23886)

--- a/po/cy.po
+++ b/po/cy.po
@@ -1,7 +1,8 @@
-# translation of cy.po to Welsh
+# Welsh translation of the mousepad package.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the mousepad package.
-#
 # Geraint Rowlands <ansbaradigeidfran@gmail.com>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: cy\n"
