--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* cy.po: Modified description text
+	* fr.po: Modified description text
+
 2006-11-14  Jean-François Wauthy <pollux@xfce.org>
 
 	* cy.po: Add Welsh translations by Geraint Rowlands <ansbaradigeidfran@gmail.com>
