--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-26  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+        * ca.po: Catalan Update by Carles Muñoz Gorriz <carlesmu@ya.com>
+
 2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* cy.po: Modified description text
