--- a/po/ca.po
+++ b/po/ca.po
@@ -11,14 +11,16 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-04 17:08+0100\n"
-"PO-Revision-Date: 2006-09-18 23:37+0200\n"
+"PO-Revision-Date: 2006-11-25 10:42+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
-"Language-Team: Catalan\n"
+"Language-Team: Catalan <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: KBabel 1.11.2\n"
+"X-Poedit-Language: Catalan\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../src/callback.c:36
 #, c-format
@@ -263,6 +265,7 @@ msgstr "«%s» ja existeix. Voleu sobreescriure'l?"
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
 msgstr ""
+"Compte, esteu emprant el compte de super usuari, podeu malmetre el sistema."
 
 #: ../src/window.c:169
 msgid "Untitled"
