--- a/po/el.po
+++ b/po/el.po
@@ -1,7 +1,7 @@
 # Greek translations for Mousepad package.
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
-# Stavros Giannouris <stavrosg2002@freemail.gr>, 2005.
+# Stavros Giannouris <stavrosg@serverhive.com>, 2005.
 # Stathis Kamperis <ekamperi@auth.gr>, 2006.
 #
 msgid ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-04 17:08+0100\n"
 "PO-Revision-Date: 2006-11-11 20:14+0200\n"
-"Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
+"Last-Translator: Stavros Giannouris <stavrosg@serverhive.com>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
