--- a/po/lt.po
+++ b/po/lt.po
@@ -8,31 +8,34 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-04 17:08+0100\n"
-"PO-Revision-Date: 2005-10-07 18:44+0900\n"
-"Last-Translator: Lech Jankovski <godgard@gmail.com>\n"
+"PO-Revision-Date: 2006-12-05 21:03+0300\n"
+"Last-Translator: Mantas Zapolskas <mantaz@users.sf.net>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Lithuanian\n"
+"X-Poedit-Country: LITHUANIA\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../src/callback.c:36
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Išsaugoti pokyčius į '%s'?"
+msgstr "Išsaugoti pakeitimus į '%s'?"
 
-#: ../src/callback.c:184 ../src/file.c:150
+#: ../src/callback.c:184
+#: ../src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr ""
+msgstr "Neįmanoma pakeisti koduotės į '%s'"
 
 #: ../src/callback.c:211
-#, fuzzy
 msgid "Can't open pipe to process"
-msgstr "Neįmanoma atidaryti bylos rašymui"
+msgstr "Neįmanoma atidaryti failo rašymui"
 
 #: ../src/callback.c:370
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "Xfce tekstų redaktorius"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -41,11 +44,11 @@ msgstr "Apie %s"
 
 #: ../src/file.c:163
 msgid "Can't open file to write"
-msgstr "Neįmanoma atidaryti bylos rašymui"
+msgstr "Neįmanoma atidaryti failo rašymui"
 
 #: ../src/file.c:168
 msgid "Can't write file"
-msgstr "Neįmanoma įrašyti bylos"
+msgstr "Neįmanoma įrašyti failo"
 
 #: ../src/font.c:49
 msgid "Font"
@@ -53,37 +56,35 @@ msgstr "Šriftas"
 
 #: ../src/menu.c:60
 msgid "/_File"
-msgstr "/_Byla"
+msgstr "/_Failas"
 
 #: ../src/menu.c:62
 msgid "/File/_New"
-msgstr "/Byla/_Nauja"
+msgstr "/Failas/_Naujas"
 
 #: ../src/menu.c:65
-#, fuzzy
 msgid "/File/New _Window"
-msgstr "/Byla/_Nauja"
+msgstr "/Failas/Naujas _Langas"
 
 #: ../src/menu.c:68
 msgid "/File/_Open..."
-msgstr "/Byla/_Atidaryti..."
+msgstr "/Failas/_Atidaryti..."
 
 #: ../src/menu.c:70
 msgid "/File/_Save"
-msgstr "/Byla/_Išsaugoti"
+msgstr "/Failas/_Išsaugoti"
 
 #: ../src/menu.c:72
 msgid "/File/Save _As..."
-msgstr "/Byla/Išsaugoti _kaip..."
+msgstr "/Failas/Išsaugoti _kaip..."
 
 #: ../src/menu.c:74
-#, fuzzy
 msgid "/File/_Print..."
-msgstr "/Byla/_Atidaryti..."
+msgstr "/Failas/_Atidaryti..."
 
 #: ../src/menu.c:78
 msgid "/File/_Quit"
-msgstr "/Byla/Iš_eiti"
+msgstr "/Failas/Iš_eiti"
 
 #: ../src/menu.c:80
 msgid "/_Edit"
@@ -95,7 +96,7 @@ msgstr "/Keisti/_Atšaukti"
 
 #: ../src/menu.c:84
 msgid "/Edit/_Redo"
-msgstr "/Keisti/_Grąžinti"
+msgstr "/Keisti/_Pakartoti"
 
 #: ../src/menu.c:88
 msgid "/Edit/Cu_t"
@@ -111,7 +112,7 @@ msgstr "/Keisti/Įdė_ti"
 
 #: ../src/menu.c:94
 msgid "/Edit/_Delete"
-msgstr "/Keisti/_Pašalinti"
+msgstr "/Keisti/_Ištrinti"
 
 #: ../src/menu.c:98
 msgid "/Edit/Select _All"
@@ -127,11 +128,11 @@ msgstr "/Paieška/_Ieškoti..."
 
 #: ../src/menu.c:104
 msgid "/Search/Find _Next"
-msgstr "/Paieška/Surask _sekantį"
+msgstr "/Paieška/Surasti _kitą"
 
 #: ../src/menu.c:106
 msgid "/Search/Find _Previous"
-msgstr "/Paieška/Surask p_raeitą"
+msgstr "/Paieška/Surasti _ankstesnį"
 
 #: ../src/menu.c:108
 msgid "/Search/_Replace..."
@@ -180,17 +181,19 @@ msgstr "Pakeisti?"
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "%d tekstų pakeista"
+msgstr "%d pakeista"
 
 #: ../src/search.c:188
 msgid "Find"
 msgstr "Ieškoti"
 
-#: ../src/search.c:200 ../src/search.c:265
+#: ../src/search.c:200
+#: ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "_Ieškoti ko: "
+msgstr "_Ieškoti: "
 
-#: ../src/search.c:219 ../src/search.c:292
+#: ../src/search.c:219
+#: ../src/search.c:292
 msgid "_Match case"
 msgstr "_Skirti raidžių dydį"
 
@@ -200,7 +203,7 @@ msgstr "Pakeisti"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "P_akeisti kuo: "
+msgstr "P_akeisti: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
@@ -212,7 +215,7 @@ msgstr "Peršokti į"
 
 #: ../src/search.c:347
 msgid "_Jump"
-msgstr "_Nušok"
+msgstr "_Peršokti"
 
 #: ../src/search.c:353
 msgid "_Line number: "
@@ -225,11 +228,11 @@ msgstr "Esama lokalė (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr ""
+msgstr "Kita koduotė"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr ""
+msgstr "K_oduotė:"
 
 #: ../src/selector.c:207
 #, c-format
@@ -250,7 +253,7 @@ msgstr "Išsaugoti kaip"
 
 #: ../src/selector.c:345
 msgid "Ch_aracter Coding: "
-msgstr "Si_mbolių kodavimas: "
+msgstr "Si_mbolių koduotė: "
 
 #: ../src/selector.c:401
 #, c-format
@@ -260,7 +263,7 @@ msgstr "'%s' jau egzistuoja. Perrašyti?"
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr ""
+msgstr "Atsargiai, Jūs naudojatės administratoriaus paskyra, dėl to galite pakenkti sistemai."
 
 #: ../src/window.c:169
 msgid "Untitled"
@@ -268,13 +271,13 @@ msgstr "Bevardis"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
-msgstr ""
+msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
 msgstr "Paprastas teksto redaktorius"
 
 #: ../mousepad.desktop.in.h:3
-#, fuzzy
 msgid "Text Editor"
-msgstr "Paprastas teksto redaktorius"
+msgstr "Teksto redaktorius"
+
