--- a/po/ru.po
+++ b/po/ru.po
@@ -60,9 +60,8 @@ msgid "/File/_New"
 msgstr "/Файл/_Создать"
 
 #: ../src/menu.c:65
-#, fuzzy
 msgid "/File/New _Window"
-msgstr "/Файл/_Создать"
+msgstr "/Файл/_Новое окно"
 
 #: ../src/menu.c:68
 msgid "/File/_Open..."
@@ -260,6 +259,8 @@ msgstr "'%s' уже существует. Переписать?"
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
 msgstr ""
+"Внимание, вы используете учетную запись суперпользователя, при этом вы "
+"можете повредить вашу систему."
 
 #: ../src/window.c:169
 msgid "Untitled"
