--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-28  A S Alam <apbrar@gmail.com>
+
+	* pa.po: Punjabi Translation file added
+	* LINGUAS: pa is added for Punjabi locale
+
 2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* mk.po: Added the Macedonian translation by
