--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Tomas Schertel <tschertel@gmail.com>, 2005.
-# Adriano Winter Bess <awbess@gmail.com>, 2005.
+# Adriano Winter Bess <awbess@gmail.com>, 2005,2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: mousepad 0.2.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-04 17:08+0100\n"
-"PO-Revision-Date: 2006-05-01 21:53-0300\n"
+"PO-Revision-Date: 2006-12-28 14:35-0200\n"
 "Last-Translator: Adriano Winter Bess <awbess@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -60,9 +60,8 @@ msgid "/File/_New"
 msgstr "/Arquivo/_Novo"
 
 #: ../src/menu.c:65
-#, fuzzy
 msgid "/File/New _Window"
-msgstr "/Arquivo/_Novo"
+msgstr "/Arquivo/Nova _Janela"
 
 #: ../src/menu.c:68
 msgid "/File/_Open..."
@@ -260,6 +259,8 @@ msgstr "'%s' já existe. Sobrescrever?"
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
 msgstr ""
+"Cuidado, você está usando a conta de adminstrador, você pode danificar seu "
+"sistema."
 
 #: ../src/window.c:169
 msgid "Untitled"
