--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* pl.po: Updated the Polish translation by
+	Piotr Maliński <admin@rk.edu.pl>
+
 2006-12-28  Adriano Winter Bess  <adriano@xfce.org>
 
         * pt_BR.po: Updated brazilian portuguese translations.
