--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed accelerators in the French translation
+
 2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* pl.po: Updated the Polish translation by
