--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-Erik Harrison <erikharrison@gmail.com>
+Erik Harrison <erikharrison@xfce.org>
 Benedikt Meurer <benny@xfce.org>
 Tarot Osuji <tarot@sdf.lonestar.org>
