--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-20  Benedikt Meurer <benny@xfce.org>
+
+	* mousepad.pot, *.po: Merge new strings.
+
 2007-01-20  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Added Belarusian Translation
@@ -18,7 +22,7 @@
 
 2006-12-28  Adriano Winter Bess  <adriano@xfce.org>
 
-        * pt_BR.po: Updated brazilian portuguese translations.
+	* pt_BR.po: Updated brazilian portuguese translations.
 
 2006-12-28  A S Alam <apbrar@gmail.com>
 
