2007-01-20  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
	* be.po: Updated Belarusian Translation



(Old svn revision: 24643)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-20  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
+
+	* be.po: Updated Belarusian Translation
+
 2007-01-20  Benedikt Meurer <benny@xfce.org>
 
 	* mousepad.pot, *.po: Merge new strings.
